apps/staging/cnpg-cluster/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: traefik
  rules:
    - host: pgadmin.barina.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
  tls:
    - hosts:
        - pgadmin.barina.tech
      secretName: pgadmin-tls-secret
